--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
@@ -53,6 +54,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.25",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "latest",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
