--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-cloudinary": "^6.16.0",
     "next-themes": "latest",
+    "nodemailer": "^6.10.1",
     "openai": "^4.20.1",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
@@ -76,6 +77,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
